tests/snapshots/run_wpt_conformance__trtx_prelu_float32_broadcast_5D_x_5D_slope_with_expanded_output_shape.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "prelu.https.any.js",
    "prelu float32 broadcast 5D x 5D slope with expanded output shape",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    preluInput: f32[2, 1, 1, 2, 3];\n  }\n\n  consts {\n    operand_1: f32[1, 2, 1, 1, 1] @bytes([214, 93, 160, 64, 18, 40, 246, 62]);\n  }\n\n  nodes {\n    [preluOutput] = prelu(preluInput, operand_1, label=\"\");\n  }\n\n  outputs { preluOutput; }\n}\n",
        ),
    },
)
