tests/snapshots/run_wpt_conformance__trtx_prelu_int64_2D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu int64 2D constant tensors, trtx
 prelu :: prelu int64 2D constant tensors: index 0: actual=0 expected=20 tolerance=0
  inputs: preluInput: [-4, -2, -1, 0, 0, 0, 1, 2, 4] (constant); preluSlope: [-5, 0, 5, -5, 0, 5, -5, 0, 5] (constant)
  expected preluOutput: [20, 0, -5, 0, 0, 0, 1, 2, 4]
  actual preluOutput: [0, 0, 0, 0, 0, 0, 0, 0, 0]
  expected preluOutput full nd:
(shape [3, 3])
  [20, 0, -5]
  [0, 0, 0]
  [1, 2, 4]
  actual preluOutput full nd:
[ ...] (len=0, shape=[3, 3])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i64[3, 3] @bytes([252, 255, 255, 255, 255, 255, 255, 255, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0]);
    operand_1: i64[3, 3] @bytes([251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 251, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [preluOutput] = prelu(operand_0, operand_1, label="");
  }

  outputs { preluOutput; }
}
