tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float16_2D_tensor_broadcasting_zeroPoint_and_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 2D tensor broadcasting zeroPoint and scale, trtx
 quantizeLinear :: quantizeLinear float16 2D tensor broadcasting zeroPoint and scale: index 0: actual=0 expected=128 tolerance=1
  inputs: quantizeLinearInput: [-2.548828125, -4.79296875, 8.4140625, 6.109375]; quantizeLinearScale: [9.34375] (constant); quantizeLinearZeroPoint: [128] (constant)
  expected quantizeLinearOutput: [128, 127, 129, 129]
  actual quantizeLinearOutput: [0, 0, 255, 255]
  expected quantizeLinearOutput full nd:
(shape [2, 2])
  [128, 127]
  [129, 129]
  actual quantizeLinearOutput full nd:
(shape [2, 2])
  [0, 0]
  [255, 255]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[2, 2];
  }

  consts {
    operand_1: f16[1, 1] @bytes([172, 72]);
    operand_2: u8[1, 1] @bytes([128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
