tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float16_4D_tensor_broadcasting_scale_and_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float16 4D tensor broadcasting scale and zeroPoint",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    quantizeLinearInput: f16[1, 1, 2, 2];\n  }\n\n  consts {\n    operand_0: f16[1, 1, 2, 1] @bytes([123, 52, 158, 68]);\n    operand_1: u8[1, 1, 2, 1] @bytes([128, 128]);\n  }\n\n  nodes {\n    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_0, operand_1, label=\"\");\n  }\n\n  outputs { quantizeLinearOutput; }\n}\n",
        ),
    },
)
