tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float16_tensor_with_int32_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 tensor with int32 zeroPoint, trtx
 quantizeLinear :: quantizeLinear float16 tensor with int32 zeroPoint: index 0: actual=-2147483648 expected=12347 tolerance=1
  inputs: quantizeLinearInput: [-22400, 8.4140625]; quantizeLinearScale: [1.1201171875, 0.280029296875] (constant); quantizeLinearZeroPoint: [32345, -2445234] (constant)
  expected quantizeLinearOutput: [12347, -2445204]
  actual quantizeLinearOutput: [-2147483648, 2147483647]
  expected quantizeLinearOutput full nd:
(shape [2])
[12347, -2445204]
  actual quantizeLinearOutput full nd:
(shape [2])
[-2147483648, 2147483647]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[2];
  }

  consts {
    operand_1: f16[2] @bytes([123, 60, 123, 52]);
    operand_2: i32[2] @bytes([89, 126, 0, 0, 78, 176, 218, 255]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
