tests/snapshots/run_wpt_conformance__trtx_quantizeLinear_float16_tensor_with_int4_zeroPoint_which_has_even_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float16 tensor with int4 zeroPoint which has even size, trtx
 quantizeLinear :: quantizeLinear float16 tensor with int4 zeroPoint which has even size: index 0: actual=7 expected=-2 tolerance=1
  inputs: quantizeLinearInput: [4.79296875, 3.234375]; quantizeLinearScale: [1.1201171875, 1.1201171875] (constant); quantizeLinearZeroPoint: [-6, -5] (constant)
  expected quantizeLinearOutput: [-2, -2]
  actual quantizeLinearOutput: [7, 7]
  expected quantizeLinearOutput full nd:
(shape [2])
[-2, -2]
  actual quantizeLinearOutput full nd:
(shape [2])
[7, 7]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f16[2];
  }

  consts {
    operand_1: f16[2] @bytes([123, 60, 123, 60]);
    operand_2: i4[2] @bytes([186]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
